--- a/packages/mui-nested-menu/package.json
+++ b/packages/mui-nested-menu/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mui-nested-menu",
-    "version": "3.3.0",
-    "description": "Infinitely deep nested menu items for MUI 5.",
+    "version": "3.5.0",
+    "description": "Infinitely deep nested menu items for MUI 6.",
     "keywords": [
         "design",
         "material",
@@ -27,21 +27,13 @@
         "build:package": "npm run set-package:build && parcel build --no-optimize --no-source-maps --no-content-hash --target && npm run set-package:dev",
         "clean": "rm -rf dist",
         "copy": "cp ../../README.md ./dist/README.md && cp ../../LICENSE ./dist/LICENSE && cp ./package.template.json ./dist/package.json",
-        "dist": "npm run clean && npm run build:package && npm run copy",
-        "prepare": "npm run version:currentpackage",
-        "publish:minor": "npm run prepare && npm version minor && npm run dist && cd ./dist && npm publish  && cd ../../..",
-        "publish:patch": "npm run prepare && npm version patch && npm run dist && cd ./dist && npm publish  && cd ../../..",
-        "set-package:build": "npm pkg set module=dist/module.js && npm pkg set types=dist/index.d.ts",
-        "set-package:dev": "npm pkg set module=src/index.ts && npm pkg set types=src/index.ts",
-        "postversion": "npm run version:currenttemplate",
-        "version:currentpackage": "npm pkg set 'version'=$(npm view mui-nested-menu version)",
-        "version:currenttemplate": "VERSION=$(npx fx package.json 'x => x.version') && npx fx package.template.json '{...x, version: \"'$VERSION'\"}' > temp.json && mv temp.json package.template.json"
+        "dist": "npm run clean && npm run build:package && npm run copy"
     },
     "dependencies": {
-        "@emotion/react": "11.10.5",
-        "@emotion/styled": "11.10.5",
-        "@mui/material": "5.0.0",
-        "@mui/system": "5.10.12",
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^6.1.6",
+        "@mui/system": "^6.1.6",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
