--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,28 +9,28 @@
     },
     "browserslist": "> 0.5%, last 2 versions",
     "dependencies": {
-        "@mui/icons-material": "^6.1.6",
-        "@mui/material": "^6.1.6",
+        "@mui/icons-material": "^7.3.6",
+        "@mui/material": "^7.3.7",
         "mui-nested-menu": "*",
         "prismjs": "1.29.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-router-dom": "6.8.1",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "react-router-dom": "^7.10.1",
         "ui": "*"
     },
     "devDependencies": {
-        "@emotion/react": "11.10.5",
-        "@emotion/styled": "11.10.5",
-        "@types/prismjs": "1.26.0",
-        "@types/react": "18.0.28",
-        "@types/react-dom": "18.0.10",
+        "@emotion/react": "11.14.0",
+        "@emotion/styled": "11.14.1",
+        "@types/prismjs": "1.26.5",
+        "@types/react": "19.2.8",
+        "@types/react-dom": "19.2.3",
         "@types/react-router": "5.1.20",
         "@types/react-router-dom": "5.3.3",
-        "@vitejs/plugin-react": "3.1.0",
+        "@vitejs/plugin-react": "5.1.2",
         "ts-prune": "0.10.3",
-        "typescript": "4.9.5",
-        "vite": "4.1.1",
-        "vite-plugin-svgr": "2.4.0",
-        "vite-tsconfig-paths": "4.0.5"
+        "typescript": "5.9.3",
+        "vite": "7.3.0",
+        "vite-plugin-svgr": "4.5.0",
+        "vite-tsconfig-paths": "6.0.4"
     }
 }
