--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -4,6 +4,6 @@
     "main": "./src/index.ts",
     "types": "./src/index.ts",
     "devDependencies": {
-        "typescript": "4.9.4"
+        "typescript": "^5.9.3"
     }
 }
