--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,29 +4,20 @@
     "main": "./src/index.tsx",
     "types": "./src/index.tsx",
     "scripts": {
-        "build-storybook": "build-storybook --quiet",
-        "dev": "yarn storybook",
-        "lint": "TIMING=1 eslint \"**/*.ts*\"",
-        "storybook": "start-storybook -p 6006"
+        "lint": "TIMING=1 eslint \"**/*.ts*\""
     },
     "dependencies": {
-        "@emotion/css": "11.10.5",
-        "@emotion/react": "11.10.5",
+        "@emotion/css": "^11.13.5",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/material": "^7.3.7",
         "common": "*"
     },
     "devDependencies": {
-        "@babel/core": "7.20.12",
-        "@storybook/addon-actions": "6.5.15",
-        "@storybook/addon-essentials": "6.5.15",
-        "@storybook/addon-links": "6.5.15",
-        "@storybook/react": "6.5.15",
-        "@types/react": "18.0.27",
-        "@types/react-dom": "18.0.10",
-        "babel-loader": "9.1.2",
-        "eslint": "8.32.0",
-        "eslint-config-custom": "0.0.0",
-        "react": "18.2.0",
-        "tsconfig": "7.0.0",
-        "typescript": "4.9.4"
+        "@types/react": "^19.2.8",
+        "@types/react-dom": "^19.2.3",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "typescript": "^5.9.3"
     }
 }
